# dankie-rs

./: .envrc  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  clippy.toml  flake.nix  shell.nix
.direnv/: nix-profile-pre662482.785feb91183a  nix-profile-pre662482.785feb91183a.rc
dankie/: Cargo.toml  db
dankie/migration/src/: m20220101_000001_create_table.rs
dankie/src/: dolar.rs  main.rs  mod.rs  triggers.rs
dankie/src/entities/: global_regex.rs  mod.rs
dankie/tgbot/src/compositors/: state.rs
dankie/tgbot/src/errors/: https_webhook.rs
dankie/tgbot/src/event_loop/: webhook.rs
dankie/tgbot/src/markup/: strikethrough.rs
dankie/tgbot/src/predicates/: media.rs  traits.rs
dankie/tgbot/src/types/: sticker.rs
dankie/tgbot/src/types/bot_command/: scope.rs
dankie/tgbot/src/types/callback/: query.rs
dankie/tgbot/src/types/keyboard/: reply.rs
dankie/tgbot/src/types/parameters/: text.rs
migration/: Cargo.toml
src/: bot.rs  compositors.rs  dolar.rs  event_loop.rs  methods.rs  module.rs  multipart.rs  predicates.rs  types.rs
src/entities/: chat.rs  global_regex.rs  mod.rs  prelude.rs
src/errors/: download.rs  http_webhook.rs  method_call.rs
src/event_loop/: polling.rs  webhook.rs
src/markup/: code_block.rs  html.rs  inline_code.rs  link.rs  markdown_v2.rs  raw.rs  underline.rs
src/methods/: call_method.rs  delete_my_commands.rs  get_my_commands.rs  send_media_group.rs  set_my_commands.rs  unban_chat_member.rs
src/state/: chats.rs  messages.rs
src/types/: chat.rs  input_file.rs  message.rs  poll.rs  webhook_info.rs
src/util/: entities.rs
(+4 files in other folders)
