[package]
name = "dankie"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ]}
log = "0.4.22"
pretty_env_logger = "0.5.0"
tokio = {version = "1", features = ["full"]}
tbot = { git = "https://gitlab.com/SnejUgal/tbot.git", rev = "1c3692ea007df7fa94183b422c2741ad731df5e0"}
regex = "1.10.6"
anyhow = "1.0.86"
once_cell = "1.19.0"
thiserror = "1.0.63"
